# PMPP

Excercise_1/Framework/: CMakeLists.txt  ex1.err  run.sh
Excercise_1/Framework/src/: filtering.cu  filtering.h  image.cpp  image.h  main.cpp  pointer.h
Excercise_2/Framework/: CMakeLists.txt  ex2.err  ex2.out  prof.sh  prof_home.sh  run.sh
Excercise_2/Framework/src/: kernels.cu  kernels_optimized.cu  main.cpp  matrix.cpp  matrix.h  matrixops.cpp  matrixops.cu  matrixops.h  pointer.h
Patterns/: CMakeLists.txt
Patterns/apps/: CMakeLists.txt
Patterns/src/: Convolution.hpp  Merge.cu  ParallelScan.cu  Sort.hpp
apps/: CMakeLists.txt  main.cpp  main.cu
src/: CMakeLists.txt  Convolution.cpp  Convolution.cu  Convolution.hpp  Convolution.tpp  Merge.hpp  ParallelScan.hpp  Sort.cu
